# llvm-matmul-intrinsic-with-rust

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: matmul_4x4_bench.rs  matmul_bench.rs  matmul_large_bench.rs
examples/: CPU_512_OOM.ll  debug_large_jit_matmul.rs  debug_large_llvm_cpu_jit_matmul.rs
src/: common.rs  lib.rs  main.rs
src/llvm/: builtin.rs  compiled.rs  jit.rs  matmul_4x4.ll  matmul_intrinsic_naive.tmpl  matmul_ll_template.tmpl  matmul_unrolled.tmpl  mod.rs
src/llvm/gpu/: compiled.rs  cuda_driver.rs  jit.c  jit.rs  matmul_for_gpu.ll  mod.rs
tests/: gpu_test.rs  matmul_tests.rs
