[package]
name = "llvm-matmul-intrinsic-with-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.7.1", features = ["llvm21-1"] }
ndarray = "0.17.1"

[dev-dependencies]
criterion = "0.7.0"
matrixmultiply = "0.3.8"
faer = "0.19.2"

[[bench]]
name = "matmul_4x4_bench"
harness = false
