[package]
name = "llvm-matmul-intrinsic-with-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.7.1", features = ["llvm21-1"] }

[dev-dependencies]
ndarray = "0.17"
criterion = "0.7"
matrixmultiply = "0.3"
faer = "0.19"
rand = "0.9"

[[bench]]
name = "matmul_4x4_bench"
harness = false

[[bench]]
name = "matmul_large_bench"
harness = false
